# Evaluation_LLM

./: .gitignore  InterfaceChat.py  README.md  app.py  pyproject.toml
data/processed/: first_eval_ragas.csv  first_eval_results.csv  second_eval_ragas.csv  second_eval_results.csv  second_eval_results_test.csv
database/: creation_db.py  preprocessing_excel.py  sql_tool.py
evaluation/new_system/: generation_answers.py  second_generation_answers.py  second_ragas_evaluation.py
evaluation/prototype/: first_generation_answers.py
notebooks/: notebook_analyse_excel.ipynb  notebook_analyse_excel_files.ipynb  notebook_evaluation_ragas.ipynb
rag/: config.py  creation_llm.py  data_loader.py  embeddings.py  retrieval.py  router.py  vector_store.py
scripts/: build_index.py  chat.py  generation_db.py
scripts/evaluation/new_system/: second_ragas_evaluation.py
scripts/evaluation/prototype/: first_ragas_evaluation.py
tests/: validation_pydantic.py
